Fix mobile spacing and col alignment

--- a/assets/variant-list.css
+++ b/assets/variant-list.css
@@ -502,7 +502,12 @@ variant-list-remove-button:hover .icon-remove {
   }
 
   .variant-list-total__column {
-    width: 37%;
+    width: 20%;
+  }
+
+  .variant-list__total-items {
+    padding-left: calc(((11rem / var(--font-body-scale) + var(--inputs-border-width) * 2)/ 4) + 4.9rem);
+    flex-direction: column;
   }
 }
 
@@ -516,6 +521,10 @@ variant-list-remove-button {
   }
 
   .variant-list__table thead th:first-child {
+    width: 37%;
+  }
+
+  .variant-list-total__column {
     width: 37%;
   }
 
@@ -544,10 +553,6 @@ variant-list-remove-button {
 .totals__subtotal {
   margin-top: 0.2rem;
   opacity: 0.75;
-}
-
-.totals__subtotal,
-.variant-list__total-items p {
   margin-bottom: 0;
 }
 
@@ -572,38 +577,22 @@ variant-list-remove-button {
   width: min-content;
 }
 
-@media screen and (min-width: 750px) {
-  .variant-list__total-items.variant-list__total-items--has-popover {
-    padding-left: calc(((11rem / var(--font-body-scale) + var(--inputs-border-width) * 2)/ 2) + 1.5rem);
-  }
-
-  .variant-list__total-items {
-    flex-direction: column;
-    align-items: center;
-    padding-left: calc(((11rem / var(--font-body-scale) + var(--inputs-border-width) * 2)/ 4) + 4.9rem)
-  }
-
-  .variant-list__total-items p,
-  .totals__subtotal {
-    margin-bottom: 1.2rem;
-  }
-
-  .variant-list-total__price {
-    flex-grow: 1;
-    text-align: right;
-  }
-
-  .variant-list-total__price .button {
-    margin-right: 2rem;
-  }
-
-  .variantlist-total {
-    position: sticky;
-    bottom: 0;
-    z-index: 1;
-    background-color: rgb(var(--color-background));
-  }
+.variant-list-total__price {
+  flex-grow: 1;
+  text-align: right;
 }
+
+.variant-list-total__price .button {
+  margin-right: 2rem;
+}
+
+.variantlist-total {
+  position: sticky;
+  bottom: 0;
+  z-index: 1;
+  background-color: rgb(var(--color-background));
+}
+
 
 @media screen and (max-width: 749px) {
   .variant-list-total__price {
